Improve dialog boxes for confirming tag deletions.

BUG: 333386
FIXED-IN: 4.0